Update junit to 4.4. Creating some 'force copy' tests.